@@ -41,9 +41,7 @@ module Ruote::Couch
 
     def initialize (host, port, type, name)
 
-      #opts = { :re_put_ok => re_put_ok }
       opts = {}
-      #opts[:timeout] = TODO
 
       @couch = Rufus::Jig::Couch.new(host, port, name, opts)
 
